<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accediLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".View.Activity.AccessoActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/bluScuro"
            android:backgroundTint="@color/bluScuro"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Accesso"
            app:titleMarginStart="160dp"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="197dp"
            android:text="@string/unilife"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <Button
            android:id="@+id/accediButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azzurro"
            android:text="@string/accedi"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/azzurro"
            app:layout_constraintBottom_toTopOf="@+id/creaButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/creaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:backgroundTint="@color/azzurro"
            android:text="@string/crea_un_nuovo_account"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="236dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Email"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.957" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="20dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="232dp"
            android:layout_height="57dp"
            android:layout_marginBottom="100dp"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.978" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="229dp"
            android:layout_height="53dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="88dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/accediButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailLogin" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/username"
            android:src="@drawable/emailicon"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/password"
            android:src="@drawable/lockicon"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
            app:layout_constraintStart_toStartOf="@+id/imageView" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>