<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".View.Activity.AllPdfActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pdfsRecyclerView"
        android:layout_width="404dp"
        android:layout_height="626dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/indietroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/GrigioChiaro"
        android:text="@string/indietro"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdfsRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>