<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#817EFF"
    android:foregroundTint="#000000"
    tools:context=".View.Activity.RegistrazioneActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#5FADE6"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Registrazione"
        app:titleMarginStart="135dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/unilife"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:foregroundTint="#060C10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegistrazioneEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.566" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:contentDescription="@string/password"
        android:layout_marginBottom="256dp"
        android:src="@drawable/lockicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextRegistrazioneEmail"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegistrazionePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginBottom="100dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:contentDescription="@string/email"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/emailicon"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextRegistrazionePassword"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrazioneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="21dp"
        android:layout_marginBottom="256dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="88dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="216dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.657" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:contentDescription="@string/username"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/usericon"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registrazioneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#6D91EAC5"
        android:text="@string/registrati"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:text="Already registered? Login"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/red"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrazioneButton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="711dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>